--- a/include/header.html
+++ b/include/header.html
@@ -30,7 +30,7 @@
     </div>
     <div class="header-main">
       <div class="main-logo">
-        <a href="/index.html">
+        <a href="/seoulchildrensgrandpark_Portfolio/index.html">
           <img src="/seoulchildrensgrandpark_Portfolio/images/variables/header-logo.png" alt="헤더 로고">
         </a>
       </div>
