--- a/css/style.css
+++ b/css/style.css
@@ -4348,6 +4348,10 @@ body {
   height: max-content;
   margin-bottom: 120px;
 }
+.directions .directions-inner .directions-top #map {
+  width: 100%;
+  height: 620px;
+}
 .directions .directions-inner .directions-top h1 {
   font-size: 48px;
   font-weight: bold;
