--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3252,6 +3252,10 @@ height: 100vh;
     height: max-content;
     margin-bottom: 120px;
     .directions-top{
+      #map{
+        width: 100%;
+        height: 620px;
+      }
       h1{
         font-size: 48px;
         font-weight: bold;
