--- a/css/style.css
+++ b/css/style.css
@@ -42,14 +42,14 @@ li {
 /* 카카오 폰트 primary-kr  */
 @font-face {
   font-family: "Kakao-Regular";
-  src: url("/seoulchildrensgrandpark_Portfolio/fonts/KakaoRegular.woff") format("woff2");
+  src: url("/fonts/KakaoRegular.woff") format("woff2");
   font-weight: normal;
   font-style: normal;
 }
 /* 카카오 폰트 Secondary-kr */
 @font-face {
   font-family: "Kakao-Bold";
-  src: url("/seoulchildrensgrandpark_Portfolio/fonts/KakaoBold.woff") format("woff2");
+  src: url("/fonts/KakaoBold.woff") format("woff2");
   font-weight: 700; /*Bold*/
   font-style: normal;
 }
@@ -977,7 +977,7 @@ header .header-side-menu .side-menu-wrap .nav-items .nav-item .nav-item-in .nav-
           align-items: center;
 }
 .footer-green-include footer .footer-logo {
-  background-image: url(/seoulchildrensgrandpark_Portfolio/images/variables/footer-logo.png);
+  background-image: url(/images/variables/footer-logo.png);
   background-size: auto;
   width: 128px;
   height: 128px;
@@ -1128,7 +1128,7 @@ header .header-side-menu .side-menu-wrap .nav-items .nav-item .nav-item-in .nav-
           align-items: center;
 }
 .footer-white-include footer .footer-logo {
-  background-image: url(/seoulchildrensgrandpark_Portfolio/images/footer/서울어린이대공원Logo-03.png);
+  background-image: url(/images/footer/서울어린이대공원Logo-03.png);
   background-size: cover;
   width: 128px;
   height: 128px;
@@ -1281,7 +1281,7 @@ header .header-side-menu .side-menu-wrap .nav-items .nav-item .nav-item-in .nav-
   width: 30px;
   height: 21px;
   position: absolute;
-  background: url(/seoulchildrensgrandpark_Portfolio/images/subpage_04_ticket_info/triangle.svg) no-repeat;
+  background: url(../images/subpage_04_ticket_info/triangle.svg) no-repeat;
   background-size: cover;
   top: 50%;
   right: 30px;
@@ -1964,7 +1964,7 @@ body {
   width: 100vw;
   overflow: hidden;
   height: auto;
-  background: url(/seoulchildrensgrandpark_Portfolio/images/mainpage/main/mainVisual_bg.png) no-repeat;
+  background: url(/images/mainpage/main/mainVisual_bg.png) no-repeat;
   background-size: cover;
 }
 .main-section .gyro-drop .gyro-drop-chair {
@@ -3003,13 +3003,13 @@ body {
   background-color: #96D7FF;
 }
 .sub-section-02 .sub-section-02-inner .main-contents .tab-contents .animal:hover .wrap .bg {
-  background-image: url("/seoulchildrensgrandpark_Portfolio/images/mainpage/section_02/section_02-01(hover).jpg");
+  background-image: url("/images/mainpage/section_02/section_02-01(hover).jpg");
 }
 .sub-section-02 .sub-section-02-inner .main-contents .tab-contents .animal .wrap .animal-box {
   background-color: #CCCCCC;
 }
 .sub-section-02 .sub-section-02-inner .main-contents .tab-contents .animal .wrap .animal-bg {
-  background-image: url(/seoulchildrensgrandpark_Portfolio/images/mainpage/section_02/section_02-01.jpg);
+  background-image: url(/images/mainpage/section_02/section_02-01.jpg);
 }
 .sub-section-02 .sub-section-02-inner .main-contents .tab-contents .animal .wrap .animal-icon {
   position: absolute;
@@ -3033,13 +3033,13 @@ body {
   background-color: #C5E6ff;
 }
 .sub-section-02 .sub-section-02-inner .main-contents .tab-contents .nature:hover .wrap .bg {
-  background-image: url("/seoulchildrensgrandpark_Portfolio/images/mainpage/section_02/section_02-02(hover).jpg");
+  background-image: url("/images/mainpage/section_02/section_02-02(hover).jpg");
 }
 .sub-section-02 .sub-section-02-inner .main-contents .tab-contents .nature .wrap .nature-box {
   background-color: #E0E0E0;
 }
 .sub-section-02 .sub-section-02-inner .main-contents .tab-contents .nature .wrap .nature-bg {
-  background-image: url("/seoulchildrensgrandpark_Portfolio/images/mainpage/section_02/section_02-02.jpg");
+  background-image: url("/images/mainpage/section_02/section_02-02.jpg");
 }
 .sub-section-02 .sub-section-02-inner .main-contents .tab-contents .nature .wrap .nature-icon {
   position: absolute;
@@ -3062,13 +3062,13 @@ body {
   background-color: #63A6EA;
 }
 .sub-section-02 .sub-section-02-inner .main-contents .tab-contents .fun:hover .wrap .bg {
-  background-image: url("/seoulchildrensgrandpark_Portfolio/images/mainpage/section_02/section_02-03(hover).jpg");
+  background-image: url("/images/mainpage/section_02/section_02-03(hover).jpg");
 }
 .sub-section-02 .sub-section-02-inner .main-contents .tab-contents .fun .wrap .fun-box {
   background-color: #A3A3A3;
 }
 .sub-section-02 .sub-section-02-inner .main-contents .tab-contents .fun .wrap .bg {
-  background-image: url("/seoulchildrensgrandpark_Portfolio/images/mainpage/section_02/section_02-03.jpg");
+  background-image: url("/images/mainpage/section_02/section_02-03.jpg");
 }
 .sub-section-02 .sub-section-02-inner .main-contents .tab-contents .fun .wrap .fun-icon {
   position: absolute;
@@ -4348,20 +4348,23 @@ body {
   height: max-content;
   margin-bottom: 120px;
 }
-.directions .directions-inner .directions-top #map {
-  width: 100%;
-  height: 620px;
-}
 .directions .directions-inner .directions-top h1 {
   font-size: 48px;
   font-weight: bold;
   color: #284327;
   margin-top: 100px;
 }
-.directions .directions-inner .directions-top #map {
+.directions .directions-inner .directions-top .map-container {
   margin-top: 30px;
-  border: 1px solid #000;
   border-radius: 30px 30px 0 0;
+  border: 1px solid #000;
+  width: 66.6vw;
+  height: 60vh;
+  overflow: hidden;
+}
+.directions .directions-inner .directions-top .map-container #map {
+  width: inherit;
+  height: inherit;
 }
 .directions .directions-inner .directions-top .text {
   width: 100%;
@@ -5055,7 +5058,7 @@ body {
   position: absolute;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
-  background: url("/seoulchildrensgrandpark_Portfolio/images/subpage_04_ticket_info/arrow-right.svg") no-repeat;
+  background: url("../images/subpage_04_ticket_info/arrow-right.svg") no-repeat;
   background-size: cover;
 }
 .ticket-info .ticket-info-wrap .ticket-info-icons .icon:last-child::after {
@@ -5309,7 +5312,7 @@ body {
 .ticket-rsv .ticket-rsv-wrap .ticket-rsv-box .ticket-rsv-info .info-header {
   width: 100%;
   height: 70px;
-  background: url(/seoulchildrensgrandpark_Portfolio/images/subpage_05_ticket_rev/info-header.png) no-repeat;
+  background: url(/images/subpage_05_ticket_rev/info-header.png) no-repeat;
   background-size: cover;
   border-radius: 20px;
 }
@@ -5383,7 +5386,7 @@ body {
   content: "";
   width: 17px;
   height: 12px;
-  background: url(/seoulchildrensgrandpark_Portfolio/images/subpage_05_ticket_rev/path.svg) no-repeat;
+  background: url(../images/subpage_05_ticket_rev/path.svg) no-repeat;
   background-size: cover;
   position: absolute;
   top: 50%;
@@ -5635,7 +5638,7 @@ body {
 }
 .ticket-cart .ticket-cart-wrap .cart-wrap .cart-items .cart-item .cart-overview .cart-overview-header .btn-clear {
   border: none;
-  background: url(/seoulchildrensgrandpark_Portfolio/images/subpage_06_ticket_cart/x.svg) no-repeat;
+  background: url(../images/subpage_06_ticket_cart/x.svg) no-repeat;
   width: 16px;
   height: 16px;
   background-size: cover;
@@ -5784,7 +5787,7 @@ body {
   width: 20px;
   height: 20px;
   margin-right: 3px;
-  background: url("/seoulchildrensgrandpark_Portfolio/images/subpage_06_ticket_cart/check-circle.svg") no-repeat;
+  background: url("/images/subpage_06_ticket_cart/check-circle.svg") no-repeat;
   background-position: left;
   -webkit-transform: translateY(3px);
           transform: translateY(3px);
@@ -5792,7 +5795,7 @@ body {
   transition: background 0.15s;
 }
 .ticket-cart .ticket-cart-wrap .payment .price-total-wrap .payment-method-wrap > div label input[type=radio]:checked + em {
-  background-image: url("/seoulchildrensgrandpark_Portfolio/images/subpage_06_ticket_cart/check-circle-on.svg");
+  background-image: url("../images/subpage_06_ticket_cart/check-circle-on.svg");
 }
 .ticket-cart .ticket-cart-wrap .payment .price-total-wrap .payment-method-wrap > div label img {
   height: 20px;
