--- a/scss/responsive-tablet.scss
+++ b/scss/responsive-tablet.scss
@@ -319,7 +319,7 @@
           display: flex;
           justify-content: center;
           .animal, .nature, .fun{
-            width: 80%;
+            width: 100%;
             height: fit-content;
             position: absolute;
             .title{
@@ -354,7 +354,7 @@
                     white-space: nowrap;
                     width: 25%;
                     height: 40px;
-                    font-size: 1.2em;
+                    font-size: 1em;
                     line-height: 40px;
                     margin-right: 20px;
                   }
@@ -608,6 +608,11 @@
         height: 330px;
         &:nth-child(-n+9) {
           display: block;
+        }
+        img{
+          &:hover{
+            transform: scale(1);
+          }
         }
       }
     }
@@ -1452,6 +1457,9 @@
         }
       }
     }
+    .main-popup{
+      display: none;
+    }
     .today-info{
       .waether{ 
         #weather-icon{
@@ -1779,7 +1787,7 @@
   .attraction-banner{
     img{
       width: 100%;
-      margin-top: 160px;
+      margin-top: 130px;
       height: 300px;
       object-fit: cover;
     }
@@ -1809,23 +1817,26 @@
         #attraction-form{
           display: flex;
           flex-direction: column;
+          overflow: hidden;
           .top-options-wrap{
             display: block;
-            margin-left: 7%;
+            justify-content: center;
+            align-items: center;
             .options-num, .options-chk{
               margin-top: 0px;
-              gap: 20px;
+              gap: 50px;
             .option{
-              width: 45%;
+              max-width: 45%;
             }
           }
           .options-num{
             margin-top: 32px;
             margin-left: 0px;
+            overflow: hidden;
             input{
               background-color: transparent;
               &[type=text]{
-                width: 73%;
+                width: 70%;
               }
             }
             .suv{
@@ -1837,7 +1848,7 @@
             position: relative;
             .option{
               .suv{
-                margin-left: -40%;
+                padding-left: 75px;
                 font-size: 14px;
               }       
             }       
@@ -1858,13 +1869,13 @@
     .rides-container{
       width: 100%;
       display: grid;
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: repeat(3, 1fr);
       gap: 47px;
       padding: 80px 0;
       .ride-item{
         width: 100%;
-        height: 240px;
-        &:nth-child(-n+10) {
+        height: 330px;
+        &:nth-child(-n+9) {
           display: block;
         }
       }
