--- a/css/style.css
+++ b/css/style.css
@@ -624,6 +624,7 @@ header .header-side-menu {
   height: 100vh; /* 전체 높이를 화면에 맞게 설정 */
 }
 header .header-side-menu .side-menu-wrap {
+  display: none;
   position: fixed;
   top: 170px;
   right: 0; /* 오른쪽으로 고정 */
@@ -3850,7 +3851,7 @@ body {
   -o-object-position: center;
      object-position: center;
 }
-.attraction-inner .rides-container .ride-item .ride-explanation img:hover {
+.attraction-inner .rides-container .ride-item .ride-explanation:hover {
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
 }
