--- a/css/responsive-tablet.css
+++ b/css/responsive-tablet.css
@@ -490,7 +490,7 @@ li {
   /* #### attraction (attraction.html) #### */
   .attraction-banner img {
     width: 100%;
-    margin-top: 160px;
+    margin-top: 130px;
     height: 300px;
     -o-object-fit: cover;
        object-fit: cover;
@@ -591,7 +591,7 @@ li {
   .attraction-inner .rides-container {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 47px;
     padding: 80px 0;
   }
@@ -1233,6 +1233,7 @@ li {
     top: 160px;
   }
   header .header-side-menu .side-menu-wrap {
+    display: block;
     top: 160px;
   }
   /* footer */
@@ -1793,6 +1794,9 @@ li {
     overflow: hidden;
   }
   .attraction-inner .attraction-options .options-container #attraction-form .top-options-wrap {
+    width: 100%;
+    padding: 0 16px;
+    gap: 30px;
     display: block;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
@@ -1840,7 +1844,7 @@ li {
   .attraction-inner .rides-container {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 47px;
     padding: 80px 0;
   }
