--- a/scss/responsive-tablet.scss
+++ b/scss/responsive-tablet.scss
@@ -519,7 +519,7 @@
   .attraction-banner{
     img{
       width: 100%;
-      margin-top: 160px;
+      margin-top: 130px;
       height: 300px;
       object-fit: cover;
     }
@@ -600,7 +600,7 @@
     .rides-container{
       width: 100%;
       display: grid;
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: repeat(3, 1fr);
       gap: 47px;
       padding: 80px 0;
       .ride-item{
@@ -1297,6 +1297,7 @@
     .header-side-menu{
       top: 160px;
       .side-menu-wrap{
+        display: block;
         top: 160px;
       }
     }
@@ -1819,6 +1820,9 @@
           flex-direction: column;
           overflow: hidden;
           .top-options-wrap{
+            width: 100%;
+            padding: 0 16px;
+            gap: 30px;
             display: block;
             justify-content: center;
             align-items: center;
@@ -1869,7 +1873,7 @@
     .rides-container{
       width: 100%;
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
+      grid-template-columns: repeat(2, 1fr);
       gap: 47px;
       padding: 80px 0;
       .ride-item{
