--- a/scss/style.scss
+++ b/scss/style.scss
@@ -434,6 +434,7 @@ header{
       height: 100vh; /* 전체 높이를 화면에 맞게 설정 */
     
       .side-menu-wrap {
+        display: none;
         position: fixed;
         top: 170px;
         right: 0; /* 오른쪽으로 고정 */
@@ -2856,9 +2857,9 @@ height: 100vh;
           display: block;
           transition: transform 0.3s ease;
           object-position: center;
-          &:hover{
-            transform: scale(1.1);
-          }
+        }
+        &:hover{
+          transform: scale(1.1);
         }
       }
     }
