--- a/css/responsive-tablet.css
+++ b/css/responsive-tablet.css
@@ -1,6 +1,5 @@
 @charset "UTF-8";
-/* Import Local Scss Files */
-/* Font Family */
+/* Import Local Scss Files */ /* Font Family */
 /* Setting Variables : Text Color */
 /* Setting Variables : Object Color */
 /* box-shadow */
@@ -857,6 +856,9 @@ li {
     margin-top: 10px;
     cursor: pointer;
   }
+  header .header-side-menu .side-menu-wrap {
+    display: block;
+  }
   /* footer */
   .footer-green-include footer {
     height: auto;
@@ -1320,6 +1322,9 @@ li {
   .breadcrumb-wrap .breadcrumb > li .depth li {
     height: 40px;
     line-height: 40px;
+  }
+  .breadcrumb-wrap .breadcrumb > li .depth li a {
+    font-size: 14px;
   }
   /* quick menu */
   .quick-menu {
